Combine cube sample to engine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
       "name": "Launch (lldb)",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/samples/cube/cube.out",
+      "program": "${workspaceFolder}/build/main",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/samples/cube/",
+      "cwd": "${workspaceFolder}",
       "environment": [],
       "externalConsole": false,
       "MIMode": "lldb",
